# taegis-sdk-python

./: MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
.git-templates/: rules.toml
.github/workflows/: main.yml
docs/: READMD.md  README.md  authentication.md  deprecation.md  exploring_the_schema.md  extending_the_sdk.md  getting_started.md  logging.md  middlewares.md  proxy.md  querying_alerts.md  querying_events.md  querying_investigations.md  templates.md  threading.md
docs/commons/: README.md  alerts.md  cases.md  events.md  sharelinks.md
taegis_sdk_python/: __init__.py  _consts.py  _version.py  authentication.py  config.py  errors.py  history.py  loader.py  service_core.py  taegis_sdk.py  tokens.py  utils.py
taegis_sdk_python/commons/: __init__.py  _introspection.py
taegis_sdk_python/commons/alerts/: __init__.py  federated_search.py  search.py
taegis_sdk_python/commons/cases/: __init__.py  federated_search.py  search.py
taegis_sdk_python/commons/events/: __init__.py  search.py
taegis_sdk_python/commons/investigations/: __init__.py  federated_search.py  search.py
taegis_sdk_python/commons/sharelinks/: __init__.py  create.py  unfurl.py
taegis_sdk_python/middlewares/: __init__.py  utils.py
taegis_sdk_python/middlewares/curl/: __init__.py  _default.py
taegis_sdk_python/middlewares/logging/: __init__.py  _default.py
taegis_sdk_python/middlewares/retry/: __init__.py  _default.py
taegis_sdk_python/services/: __init__.py  common_types.py
taegis_sdk_python/services/access_points/: __init__.py  types.py  (+3 more)
taegis_sdk_python/templates/: __init__.py  _jinja2.py
taegis_sdk_python/transport/: aiohttp_websockets.py
(+317 files in other folders)
